# initial files in lib, add new variables to here
initial_lib = [
    'dynarr.c',
    'dynarr.h'
]

# add any other subdirectories here

# do not add anything to this variable.
# let the for loop populate the variable
# it automatically does the needed.
lib = []

# for loop to populate 'lib'
foreach lib_file : initial_lib
    lib += ('lib/' + lib_file)
endforeach
